@@ -1,0 +1,16 @@
+.scc
+*\.scc\*
+*.svn*
+*\.svn\*
+*\Debug\*
+*\bin\*
+*\obj\*
+*\x360ce_logs\*
+MySCMServerInfo
+*\MySCMServerInfo
+Thumbs.db
+*\Thumbs.db
+*.zip
+*.ncb
+*.suo
+*.user
