@@ -1,0 +1,44 @@
+﻿[PAD1]
+Native=1
+VID=0x046D
+PID=0xC294
+Left Analog X=
+Left Analog Y=
+Right Analog X=
+Right Analog Y=
+Left Analog X+ Button=
+Left Analog X- Button=
+Left Analog Y+ Button=
+Left Analog Y- Button=
+Right Analog X+ Button=
+Right Analog X- Button=
+Right Analog Y+ Button=
+Right Analog Y- Button=
+D-pad POV=
+D-pad Up=UP
+D-pad Down=DOWN
+D-pad Left=LEFT
+D-pad Right=RIGHT
+A=
+B=
+X=
+Y=
+Left Shoulder=
+Right Shoulder=
+Back=
+Start=
+Left Thumb=
+Right Thumb=
+TriggerDeadzone=0
+Left Trigger=
+Right Trigger=
+UseForceFeedback=1
+SwapMotor=0
+LeftMotorDirection=0
+RightMotorDirection=1
+ForcePercent=100
+ControllerType=1
+AxisToDPad=0
+AxisToDPadDeadZone=256
+AxisToDPadOffset=0
+Right Trigger Deadzone=0
